--- a/admin/src/scss/modules/base.scss
+++ b/admin/src/scss/modules/base.scss
@@ -15,6 +15,16 @@ span + .icon,
   @extend .p20;
 }
 
+.notice {
+  @extend .m40;
+  @extend .p20;
+  @extend .align-center;
+
+  &.large {
+    @extend .p40;
+  }
+}
+
 /* ------------------------------------------------
 
  LAYOUTS
