🚧  [ADMIN] ajout d'icones pour le backoffice

--- a/admin/src/fontello/css/fontello-codes.css
+++ b/admin/src/fontello/css/fontello-codes.css
@@ -20,3 +20,4 @@
 .icon-logout:before { content: '\e812'; } /* '' */
 .icon-alert:before { content: '\e813'; } /* '' */
 .icon-database:before { content: '\e814'; } /* '' */
+.icon-clone:before { content: '\e815'; } /* '' */
