🚧  [ADMIN] enhance le comportement des tags et des checkbox group

--- a/admin/src/scss/modules/theme.scss
+++ b/admin/src/scss/modules/theme.scss
@@ -158,7 +158,9 @@ th {
   border-color: rgba(0, 0, 0, 0.2);
 }
 
-.tagvalues {
+.tagvalues,
+.radio-group,
+.checkbox-group {
   background-color: $white;
 }
 
