--- a/admin/src/scss/modules/form.scss
+++ b/admin/src/scss/modules/form.scss
@@ -83,3 +83,28 @@ fieldset .as-form-label span {
     width: 100%;
   }
 }
+
+.radio-group,
+.checkbox-group {
+  padding: 0 12px 12px 12px;
+
+  label {
+    flex-direction: row;
+  }
+
+  label span {
+    padding: 0 7px;
+    font-weight: normal;
+  }
+
+  .as-form-label > span:not(.list) {
+    flex-wrap: wrap;
+  }
+}
+
+.form-input-help {
+  margin: 0;
+  font-size: 0.8em;
+  font-style: italic;
+  padding: 7px 0 7px 0;
+}
