🚧  💅  [ADMIN] mise à jour des helpers flexbox et margins/paddings

--- a/admin/src/scss/_base.scss
+++ b/admin/src/scss/_base.scss
@@ -191,6 +191,14 @@ fieldset {
   justify-content: space-around;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.flex-wrap-inverse {
+  flex-wrap: wrap-reverse;
+}
+
 .items-center {
   align-items: center;
 }
