🚧  [ADMIN] affichage des erreurs serveurs

--- a/admin/src/scss/modules/theme.scss
+++ b/admin/src/scss/modules/theme.scss
@@ -240,6 +240,11 @@ th {
   }
 }
 
+#grapqhlerror {
+  color: $white;
+  background-color: $redActive;
+}
+
 #preloader {
   background-color: $header2;
 
