🍰  ajout des icones pour les pages alertes et zones

--- a/admin/src/fontello/css/fontello-codes.css
+++ b/admin/src/fontello/css/fontello-codes.css
@@ -21,3 +21,4 @@
 .icon-alert:before { content: '\e813'; } /* '' */
 .icon-database:before { content: '\e814'; } /* '' */
 .icon-clone:before { content: '\e815'; } /* '' */
+.icon-map:before { content: '\e816'; } /* '' */
