--- a/admin/src/fontello/css/fontello.css
+++ b/admin/src/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?79127279');
-  src: url('../font/fontello.eot?79127279#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?79127279') format('woff2'),
-       url('../font/fontello.woff?79127279') format('woff'),
-       url('../font/fontello.ttf?79127279') format('truetype'),
-       url('../font/fontello.svg?79127279#fontello') format('svg');
+  src: url('../font/fontello.eot?6162835');
+  src: url('../font/fontello.eot?6162835#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?6162835') format('woff2'),
+       url('../font/fontello.woff?6162835') format('woff'),
+       url('../font/fontello.ttf?6162835') format('truetype'),
+       url('../font/fontello.svg?6162835#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?79127279#fontello') format('svg');
+    src: url('../font/fontello.svg?6162835#fontello') format('svg');
   }
 }
 */
@@ -77,3 +77,4 @@
 .icon-alert:before { content: '\e813'; } /* '' */
 .icon-database:before { content: '\e814'; } /* '' */
 .icon-clone:before { content: '\e815'; } /* '' */
+.icon-map:before { content: '\e816'; } /* '' */
