🚧  ajout du formulaire de creation des zones

--- a/admin/src/scss/modules/theme.scss
+++ b/admin/src/scss/modules/theme.scss
@@ -62,7 +62,8 @@ legend {
 }
 
 textarea,
-input[type='text'] {
+input[type='text'],
+input[type='number'] {
   background-color: $white;
   border-color: rgba(0, 0, 0, 0.2);
 }
