--- a/frontend/src/scss/partials/layout.scss
+++ b/frontend/src/scss/partials/layout.scss
@@ -18,6 +18,12 @@ fieldset h3 {
 
   .title {
     letter-spacing: 0.4em;
+
+    small {
+      font-size: 0.4em;
+      font-weight: 100;
+      letter-spacing: 0.1em;
+    }
   }
 
   .title,
