💅  [ADMIN] diverses modifications de l'UI des formulaires
- formatage du fichier zonepopin
- wrap des enfants des groupes radio/checkox

--- a/admin/src/scss/_grid.scss
+++ b/admin/src/scss/_grid.scss
@@ -40,3 +40,34 @@
   min-width: 0;
   max-width: 0;
 }
+
+/* --------------------------------------------
+
+ WRAPS
+
+-------------------------------------------- */
+
+.wrap3 > *,
+.wrap2 > *,
+.wrap4 > *,
+.wrap5 > * {
+  @extend .mb12;
+
+  flex: 0 0 auto;
+}
+
+.wrap2 > * {
+  width: 50%;
+}
+
+.wrap3 > * {
+  width: 33.333333%;
+}
+
+.wrap4 > * {
+  width: 25%;
+}
+
+.wrap5 > * {
+  width: 12.5%;
+}
