💅  [ADMIN] format pre element pour l'affichage des erreurs avec retour à la ligne automatique

--- a/admin/src/scss/_base.scss
+++ b/admin/src/scss/_base.scss
@@ -38,6 +38,11 @@ fieldset {
   padding: 0;
 }
 
+pre {
+  word-wrap: break-word;
+  white-space: pre-wrap;
+}
+
 :disabled,
 :disabled:hover,
 :disabled:visited {
