🚧  [ADMIN] mise a jour des fonts du projet

--- a/admin/src/fontello/css/fontello-codes.css
+++ b/admin/src/fontello/css/fontello-codes.css
@@ -22,3 +22,5 @@
 .icon-database:before { content: '\e814'; } /* '' */
 .icon-clone:before { content: '\e815'; } /* '' */
 .icon-map:before { content: '\e816'; } /* '' */
+.icon-down-open-mini:before { content: '\e817'; } /* '' */
+.icon-up-open-mini:before { content: '\e818'; } /* '' */
