🚧  [ADMIN] ajout d'une DataTable pour gérer de façon générique les tableaux d'entitées

--- a/admin/src/scss/_table.scss
+++ b/admin/src/scss/_table.scss
@@ -40,43 +40,8 @@ td:last-child {
   max-width: 200px;
 }
 
-table .small .button {
+table .small button {
   @extend .p7;
 
   width: auto;
-}
-
-table .order,
-table .expands,
-table .actions {
-  @extend .px7;
-  @extend .align-center;
-}
-
-table .expands {
-  width: 3px;
-}
-
-table .order {
-  width: 5px;
-}
-
-table .actions-1 {
-  width: 8px;
-}
-
-table .actions-2 {
-  width: 8px;
-}
-
-table .actions-3 {
-  width: 10px;
-}
-
-table .actions-4 {
-  width: 10px;
-}
-
-table .actions button ~ button {
-  margin-left: 5px;
 }
