🍰  [ADMIN] enhancements graphiques de l'UI + refactor some GraphQL methods
- ajout d'un loader sur les requetes des tables
- utilisation du datatable pour le tableau des restrictions
- utilisation du datatable pour le tableau des departements
- rename de la requete graphql ALL_DEPARTMENTS -> GET_ALL_DEPARTMENTS
- rename de la requete graphql UPDATE_DEPARTMENTS -> UPDATE_ALL_DEPARTMENTS
- ajout d'une icone au hasard dans le panneau indiquant qu'il n'y a pas de contenu

--- a/admin/src/components/datatable/datatable.css
+++ b/admin/src/components/datatable/datatable.css
@@ -3,24 +3,24 @@
   display: block;
 }
 
-.datatable table .order,
+.datatable table .small,
 .datatable table .expands,
 .datatable table .actions {
   padding: 7px;
   text-align: center;
 }
 
-.datatable table .actions button ~ button {
-  margin-left: 5px;
+.datatable table .small {
+  width: 5px;
 }
 
-.datatable table .expands,
+/* .datatable table .expands,
 .datatable table .bulkable {
   width: 3px;
-}
+} */
 
-.datatable table .order {
-  width: 5px;
+.datatable table .actions button ~ button {
+  margin-left: 5px;
 }
 
 .datatable table .actions-1 {
