--- a/admin/src/fontello/css/fontello-codes.css
+++ b/admin/src/fontello/css/fontello-codes.css
@@ -24,3 +24,12 @@
 .icon-map:before { content: '\e816'; } /* '' */
 .icon-down-open-mini:before { content: '\e817'; } /* '' */
 .icon-up-open-mini:before { content: '\e818'; } /* '' */
+.icon-emo-unhappy:before { content: '\e819'; } /* '' */
+.icon-emo-displeased:before { content: '\e81a'; } /* '' */
+.icon-emo-grin:before { content: '\e81b'; } /* '' */
+.icon-emo-thumbsup:before { content: '\e81c'; } /* '' */
+.icon-emo-surprised:before { content: '\e81d'; } /* '' */
+.icon-emo-coffee:before { content: '\e81e'; } /* '' */
+.icon-emo-happy:before { content: '\e81f'; } /* '' */
+.icon-emo-sleep:before { content: '\e820'; } /* '' */
+.icon-spin3:before { content: '\e832'; } /* '' */
