--- a/admin/src/fontello/css/fontello.css
+++ b/admin/src/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?87709428');
-  src: url('../font/fontello.eot?87709428#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?87709428') format('woff2'),
-       url('../font/fontello.woff?87709428') format('woff'),
-       url('../font/fontello.ttf?87709428') format('truetype'),
-       url('../font/fontello.svg?87709428#fontello') format('svg');
+  src: url('../font/fontello.eot?55068136');
+  src: url('../font/fontello.eot?55068136#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?55068136') format('woff2'),
+       url('../font/fontello.woff?55068136') format('woff'),
+       url('../font/fontello.ttf?55068136') format('truetype'),
+       url('../font/fontello.svg?55068136#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?87709428#fontello') format('svg');
+    src: url('../font/fontello.svg?55068136#fontello') format('svg');
   }
 }
 */
@@ -80,3 +80,12 @@
 .icon-map:before { content: '\e816'; } /* '' */
 .icon-down-open-mini:before { content: '\e817'; } /* '' */
 .icon-up-open-mini:before { content: '\e818'; } /* '' */
+.icon-emo-unhappy:before { content: '\e819'; } /* '' */
+.icon-emo-displeased:before { content: '\e81a'; } /* '' */
+.icon-emo-grin:before { content: '\e81b'; } /* '' */
+.icon-emo-thumbsup:before { content: '\e81c'; } /* '' */
+.icon-emo-surprised:before { content: '\e81d'; } /* '' */
+.icon-emo-coffee:before { content: '\e81e'; } /* '' */
+.icon-emo-happy:before { content: '\e81f'; } /* '' */
+.icon-emo-sleep:before { content: '\e820'; } /* '' */
+.icon-spin3:before { content: '\e832'; } /* '' */
