--- a/admin/src/scss/styles.scss
+++ b/admin/src/scss/styles.scss
@@ -1,4 +1,5 @@
 @import './leaflet/leaflet.css';
+@import './fontello/css/animation.css';
 @import './fontello/css/fontello-embedded.css';
 
 // SCSS Files
