🍿  [ADMIN] add open/close main navigation avec une animation

--- a/admin/src/fontello/css/fontello-codes.css
+++ b/admin/src/fontello/css/fontello-codes.css
@@ -32,4 +32,6 @@
 .icon-emo-coffee:before { content: '\e81e'; } /* '' */
 .icon-emo-happy:before { content: '\e81f'; } /* '' */
 .icon-emo-sleep:before { content: '\e820'; } /* '' */
+.icon-right-open-mini:before { content: '\e821'; } /* '' */
+.icon-left-open-mini:before { content: '\e822'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
