--- a/admin/src/scss/_base.scss
+++ b/admin/src/scss/_base.scss
@@ -142,6 +142,10 @@ pre {
   background-repeat: no-repeat;
 }
 
+.no-background {
+  background: transparent;
+}
+
 /* --------------------------------------------
 
  TEXT Alignments
