--- a/admin/src/components/navs/mainnavigation.css
+++ b/admin/src/components/navs/mainnavigation.css
@@ -3,22 +3,30 @@
   padding: 0;
   width: 45px;
   min-width: 45px;
+  overflow: hidden;
   font-size: 1.3em;
   justify-content: space-between;
+  transition: min-width 0.5s, width 0.5s;
 }
 
 #main-navigation.opened {
-  width: 120px;
-  min-width: 120px;
+  width: 160px;
+  min-width: 160px;
+}
+
+#main-navigation > button {
+  border-radius: 0;
+  color: rgba(255, 255, 255, 0.25);
 }
 
 #main-navigation .link {
   height: 45px;
   display: block;
+  padding: 0 11px;
   min-height: 45px;
   border-radius: 0;
   line-height: 45px;
-  text-align: center;
+  text-decoration: none;
 }
 
 #main-navigation .link + .link {
@@ -27,4 +35,20 @@
 
 #main-navigation .link.active {
   cursor: default;
+}
+
+#main-navigation .link .label {
+  opacity: 0;
+  font-size: 0.8em;
+  padding-left: 12px;
+}
+
+#main-navigation.opened .link {
+  width: 160px;
+  text-align: left;
+  min-width: 160px;
+}
+
+#main-navigation.opened .link .label {
+  opacity: 1;
 }
