--- a/admin/src/fontello/css/fontello.css
+++ b/admin/src/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?55068136');
-  src: url('../font/fontello.eot?55068136#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?55068136') format('woff2'),
-       url('../font/fontello.woff?55068136') format('woff'),
-       url('../font/fontello.ttf?55068136') format('truetype'),
-       url('../font/fontello.svg?55068136#fontello') format('svg');
+  src: url('../font/fontello.eot?49821721');
+  src: url('../font/fontello.eot?49821721#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?49821721') format('woff2'),
+       url('../font/fontello.woff?49821721') format('woff'),
+       url('../font/fontello.ttf?49821721') format('truetype'),
+       url('../font/fontello.svg?49821721#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?55068136#fontello') format('svg');
+    src: url('../font/fontello.svg?49821721#fontello') format('svg');
   }
 }
 */
@@ -88,4 +88,6 @@
 .icon-emo-coffee:before { content: '\e81e'; } /* '' */
 .icon-emo-happy:before { content: '\e81f'; } /* '' */
 .icon-emo-sleep:before { content: '\e820'; } /* '' */
+.icon-right-open-mini:before { content: '\e821'; } /* '' */
+.icon-left-open-mini:before { content: '\e822'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
