🚧  [ADMIN] ajout de la page mon compte pour les administrateurs/contributeurs

--- a/admin/src/fontello/css/fontello-codes.css
+++ b/admin/src/fontello/css/fontello-codes.css
@@ -34,4 +34,5 @@
 .icon-emo-sleep:before { content: '\e820'; } /* '' */
 .icon-right-open-mini:before { content: '\e821'; } /* '' */
 .icon-left-open-mini:before { content: '\e822'; } /* '' */
+.icon-cog:before { content: '\e823'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
