❌ update du gabarit des popins avec de nouvelles classes pour les blocks et les titres

--- a/admin/src/scss/_theme.scss
+++ b/admin/src/scss/_theme.scss
@@ -1,7 +1,7 @@
-.popin .popin-overlay {
+.popin .popin-background {
   background-color: rgba(0, 0, 0, 0.75);
 }
 
-.popin .popin-inner {
+.popin .popin-container {
   background-color: #FFFFFF;
 }
