--- a/admin/src/scss/_popins.scss
+++ b/admin/src/scss/_popins.scss
@@ -1,5 +1,5 @@
 .popin,
-.popin-overlay {
+.popin-background {
   top: 0;
   left: 0;
   right: 0;
@@ -19,12 +19,12 @@
   }
 }
 
-.popin-overlay {
+.popin-background {
   content: '';
 }
 
-.popin-holder,
-.popin-content {
+.popin-container,
+.popin-foreground {
   width: 100%;
   height: 100%;
   position: relative;
@@ -42,12 +42,12 @@
   }
 }
 
-.popin-content {
+.popin-foreground {
   display: flex;
 }
 
-.popin-inner {
+.popin-container {
   margin: auto;
-  border-radius: 4px;
+  border-radius: 2px;
   position: relative;
 }
