--- a/admin/src/scss/modules/popin.scss
+++ b/admin/src/scss/modules/popin.scss
@@ -23,6 +23,10 @@
   @extend .ml20;
 }
 
+#situation-popin {
+  width: 120px;
+}
+
 .popin-fieldset {
   background-color: #FFFFFF;
   border-top: 1px solid #000000;
