--- a/admin/src/scss/modules/theme.scss
+++ b/admin/src/scss/modules/theme.scss
@@ -193,6 +193,14 @@ th {
   background-color: $header1;
 }
 
+.overlay {
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.popin .popin-container {
+  background-color: #FFFFFF;
+}
+
 /* ---------------------
 
  LAYOUTS
