🚧 premiere version de la landing page

--- a/landingpage/scss/styles.scss
+++ b/landingpage/scss/styles.scss
@@ -1,9 +1,10 @@
+@import 'grid';
+@import 'margins';
 @import 'reset';
+@import 'text';
+@import 'forms';
+@import 'base';
 
-$font-size: 50px;
-
-#page-header {
-  height: 400px;
-  min-height: 400px;
-  font-size: $font-size;
-}
+// modules
+@import 'modules/base';
+@import 'modules/theme';
