--- a/frontend/static/fontello/css/fontello-codes.css
+++ b/frontend/static/fontello/css/fontello-codes.css
@@ -4,3 +4,4 @@
 .icon-droplet:before { content: '\e802'; } /* '' */
 .icon-air:before { content: '\e803'; } /* '' */
 .icon-mail:before { content: '\e804'; } /* '' */
+.icon-thumbs-up:before { content: '\e805'; } /* '' */
