--- a/frontend/static/fontello/css/fontello.css
+++ b/frontend/static/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?34518703');
-  src: url('../font/fontello.eot?34518703#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?34518703') format('woff2'),
-       url('../font/fontello.woff?34518703') format('woff'),
-       url('../font/fontello.ttf?34518703') format('truetype'),
-       url('../font/fontello.svg?34518703#fontello') format('svg');
+  src: url('../font/fontello.eot?99007441');
+  src: url('../font/fontello.eot?99007441#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?99007441') format('woff2'),
+       url('../font/fontello.woff?99007441') format('woff'),
+       url('../font/fontello.ttf?99007441') format('truetype'),
+       url('../font/fontello.svg?99007441#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?34518703#fontello') format('svg');
+    src: url('../font/fontello.svg?99007441#fontello') format('svg');
   }
 }
 */
@@ -60,3 +60,4 @@
 .icon-droplet:before { content: '\e802'; } /* '' */
 .icon-air:before { content: '\e803'; } /* '' */
 .icon-mail:before { content: '\e804'; } /* '' */
+.icon-thumbs-up:before { content: '\e805'; } /* '' */
