--- a/frontend/scss/modules/theme.scss
+++ b/frontend/scss/modules/theme.scss
@@ -5,6 +5,7 @@ $white: #FFFFFF;
 
 $blue: #427ABD;
 $blueActive: #006AAC;
+$blueDisabled: #94C2EE;
 
 $color: #1B2734;
 $color-active: #1B2734;
@@ -21,6 +22,20 @@ textarea {
   font-family: 'Open Sans', sans-serif;
 }
 
+button {
+  color: $white;
+  background-color: $blue;
+  transition: background-color 0.5s;
+
+  &:disabled {
+    background-color: $blueDisabled;
+  }
+
+  &:hover {
+    background-color: $blueActive;
+  }
+}
+
 .red {
   color: $red;
 }
@@ -33,16 +48,6 @@ textarea {
 .newsletter-form {
   .field {
     background-color: $white;
-  }
-
-  button {
-    color: $white;
-    background-color: $blue;
-    transition: background-color 0.5s;
-
-    &:hover {
-      background-color: $blueActive;
-    }
   }
 }
 
@@ -64,4 +69,15 @@ textarea {
 
 #bottom-blocks {
   background-color: $grey;
+}
+
+#demobutton {
+  /* stylelint-disable */
+  button {
+    border: 1px solid #14134E;
+    background-image: linear-gradient(312deg, #14134E, #512D5A 68%, #843B61);
+    box-shadow: 0 6px 0 #14134E, 0 3px 15px rgba(0, 0, 0, 0.4),
+      inset 0 1px 0 rgba(132, 59, 97, 1), inset 0 0 3px rgba(132, 59, 97, 1);
+  }
+  /* stylelint-enable */
 }
