--- a/admin/src/fontello/css/fontello-codes.css
+++ b/admin/src/fontello/css/fontello-codes.css
@@ -35,4 +35,5 @@
 .icon-right-open-mini:before { content: '\e821'; } /* '' */
 .icon-left-open-mini:before { content: '\e822'; } /* '' */
 .icon-cog:before { content: '\e823'; } /* '' */
+.icon-monitor:before { content: '\e824'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
