--- a/admin/src/fontello/css/fontello.css
+++ b/admin/src/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?38341553');
-  src: url('../font/fontello.eot?38341553#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?38341553') format('woff2'),
-       url('../font/fontello.woff?38341553') format('woff'),
-       url('../font/fontello.ttf?38341553') format('truetype'),
-       url('../font/fontello.svg?38341553#fontello') format('svg');
+  src: url('../font/fontello.eot?50776954');
+  src: url('../font/fontello.eot?50776954#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?50776954') format('woff2'),
+       url('../font/fontello.woff?50776954') format('woff'),
+       url('../font/fontello.ttf?50776954') format('truetype'),
+       url('../font/fontello.svg?50776954#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?38341553#fontello') format('svg');
+    src: url('../font/fontello.svg?50776954#fontello') format('svg');
   }
 }
 */
@@ -91,4 +91,5 @@
 .icon-right-open-mini:before { content: '\e821'; } /* '' */
 .icon-left-open-mini:before { content: '\e822'; } /* '' */
 .icon-cog:before { content: '\e823'; } /* '' */
+.icon-monitor:before { content: '\e824'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
