🚧 [FRONTEND] ajout du block 'qui sommes nous'
- update des icons fontello

--- a/frontend/scss/_base.scss
+++ b/frontend/scss/_base.scss
@@ -73,6 +73,12 @@ strong {
   font-weight: 900;
 }
 
+q,
+blockquote {
+  font-style: italic;
+  quotes: '„' '“' '‚' '‘';
+}
+
 :disabled,
 :disabled:hover,
 :disabled:visited {
