--- a/frontend/scss/modules/base.scss
+++ b/frontend/scss/modules/base.scss
@@ -151,3 +151,42 @@ textarea {
 #bottom-blocks .block {
   width: 28%;
 }
+
+#whoweare .person {
+  figure {
+    width: 50px;
+    height: 50px;
+    min-width: 50px;
+    min-height: 50px;
+    overflow: hidden;
+    text-align: center;
+    border-radius: 50%;
+  }
+
+  img {
+    height: 100%;
+    width: auto;
+  }
+
+  b ~ span {
+    font-size: 0.8em;
+  }
+
+  blockquote {
+    font-size: 1.1em;
+  }
+
+  a {
+    padding: 3px;
+    font-size: 0.65em;
+    border-radius: 2px;
+  }
+}
+
+#main-footer {
+  font-size: 0.8em;
+
+  a {
+    text-decoration: underline;
+  }
+}
