--- a/frontend/static/fontello/css/fontello-codes.css
+++ b/frontend/static/fontello/css/fontello-codes.css
@@ -5,3 +5,7 @@
 .icon-air:before { content: '\e803'; } /* '' */
 .icon-mail:before { content: '\e804'; } /* '' */
 .icon-thumbs-up:before { content: '\e805'; } /* '' */
+.icon-home:before { content: '\e806'; } /* '' */
+.icon-github:before { content: '\f300'; } /* '' */
+.icon-twitter:before { content: '\f309'; } /* '' */
+.icon-linkedin:before { content: '\f318'; } /* '' */
