🚧 [FRONTEND] ajout d'une bubble d'info au hero container

--- a/frontend/scss/styles.scss
+++ b/frontend/scss/styles.scss
@@ -5,7 +5,9 @@
 @import './_forms.scss';
 @import './_base.scss';
 
+// third party components
+@import './mixins/bubble.scss';
+
 // modules
-@import './modules/bubble.scss';
 @import './modules/base.scss';
 @import './modules/theme.scss';
