--- a/frontend/scss/modules/theme.scss
+++ b/frontend/scss/modules/theme.scss
@@ -76,6 +76,10 @@ button {
 #main-navigation {
   color: $white;
 
+  &.issticky {
+    background-color: rgba(0, 0, 0, 0.65);
+  }
+
   a {
     color: $white;
   }
