🚧 [FRONTEND] ajout du bouton nous soutenir dans les sponsors

--- a/frontend/scss/modules/theme.scss
+++ b/frontend/scss/modules/theme.scss
@@ -89,6 +89,17 @@ button {
   color: $white;
 }
 
+#nos-sponsors .dashed {
+  opacity: 0.45;
+  color: $dark-disabled;
+  transition: opacity 0.5s;
+  border-color: $dark-disabled;
+
+  &:hover {
+    opacity: 1;
+  }
+}
+
 #qui-sommes-nous {
   background-color: $grey;
 
