--- a/frontend/scss/modules/base.scss
+++ b/frontend/scss/modules/base.scss
@@ -188,7 +188,20 @@ textarea {
   }
 }
 
-#comment-nous-contacter .col-left {
+#nos-sponsors .dashed {
+  font-size: 1.1em;
+  border-width: 1px;
+  border-radius: 20px;
+  border-style: dashed;
+  border-color: transparent;
+  text-transform: uppercase;
+  background-color: transparent;
+  // 2px represente les 2px pixels des bordures
+  line-height: calc(65px - 2px);
+}
+
+// FIXME -> ne pas utiliser ml40 comme selecteur
+#comment-nous-contacter .col-right {
   font-size: 1.5em;
   line-height: 1.25em;
 }
