🚧 [FRONTEND] ajout de la tooltip sur les zones du widget

--- a/widget/src/scss/modules/map.scss
+++ b/widget/src/scss/modules/map.scss
@@ -1,4 +1,4 @@
-#zoning-map {
+#leaflet-map {
   width: 100%;
   height: 320px;
   background-color: #C4C4C4;
@@ -12,4 +12,5 @@
   width: 100%;
   height: 100%;
   margin: 0 auto;
+  cursor: default;
 }
