🚧 [FRONTEND] updates des lames et des blocks
- remaniement du wording
- ajout de l'animation du bouton demo dans le bandeau de navigation

--- a/frontend/scss/_base.scss
+++ b/frontend/scss/_base.scss
@@ -85,6 +85,10 @@ blockquote {
   quotes: '„' '“' '‚' '‘';
 }
 
+iframe {
+  display: block;
+}
+
 :disabled,
 :disabled:hover,
 :disabled:visited {
