--- a/frontend/scss/_text.scss
+++ b/frontend/scss/_text.scss
@@ -7,7 +7,7 @@ h1 {
 }
 
 h2 {
-  font-size: 2.2em;
+  font-size: 2.4em;
 }
 
 h3 {
@@ -50,4 +50,24 @@ h6 {
 
 .align-center {
   text-align: center;
+}
+
+/* --------------------------------------------
+
+ LISTS
+
+-------------------------------------------- */
+ul.disc-list,
+ul.disc-list li {
+  list-style-type: disc;
+}
+
+ul.circle-list,
+ul.circle-list li {
+  list-style-type: circle;
+}
+
+ul.square-list,
+ul.square-list li {
+  list-style-type: square;
 }
