--- a/frontend/scss/modules/theme.scss
+++ b/frontend/scss/modules/theme.scss
@@ -3,8 +3,9 @@ $grey: #F7F8FA;
 $gray: #E4E8EE;
 $white: #FFFFFF;
 
-$dark: #000000;
-$dark-disabled: #999999;
+$black: #000000;
+$dark: $black;
+$dark-disabled: #CCCCCC;
 
 $blue: #427ABD;
 $blueActive: #006AAC;
@@ -81,16 +82,24 @@ button {
 }
 
 .demo-button {
-  @extend .rainbow;
-
   color: $white;
   border: 1px solid $purple-0;
-  /* stylelint-disable */
+  background-color: $purple-2;
+
   &.large {
+    @extend .rainbow;
+
+    /* stylelint-disable */
     box-shadow: 0 6px 0 $purple-0, 0 3px 15px rgba(0, 0, 0, 0.4),
       inset 0 1px 0 $purple-2, inset 0 0 3px $purple-2;
+    /* stylelint-enable */
   }
-  /* stylelint-enable */
+}
+
+.person.testimonial {
+  .person-infos {
+    color: $dark-disabled;
+  }
 }
 
 #site-container > .liner {
@@ -98,14 +107,18 @@ button {
 }
 
 #main-navigation {
-  color: $white;
-
   &.issticky {
-    background-color: rgba(0, 0, 0, 0.65);
+    @extend .rainbow;
   }
 
   a {
     color: $white;
+    transition: color 0.5s;
+  }
+
+  a.active {
+    color: $purple-2;
+    background-color: $white;
   }
 }
 
