🚧 [FRONTEND] ajout de l'info bulle de validation d'email user

--- a/frontend/scss/layouts/theme.scss
+++ b/frontend/scss/layouts/theme.scss
@@ -102,6 +102,15 @@ button {
   }
 }
 
+span.error {
+  color: $red;
+}
+
+.error-tooltip {
+  color: $white;
+  background-color: $red;
+}
+
 #site-container > .liner {
   height: 5px;
 }
